# RAGE

./: .gitignore  README.md  aGLM.md  mastermind.md  pyproject.toml  ragepaper.md
docs/: rage_as_a_service.md
examples/: quickstart.py  server.py
rage/: __init__.py  indexing.py  ingestion.py  retrieval.py  storage.py
tests/: test_ingestion.py  test_retrieval.py  test_storage.py
